--- a/docs/examples/mimic_iii_ms_tk.ipynb
+++ b/docs/examples/mimic_iii_ms_tk.ipynb
@@ -59,7 +59,20 @@
     "df = module.get_patient_with_signal(df, inp_channels = inp_channels, inp_type = \"any\",\n",
     "                                    out_channels = out_channels, out_type = \"all\", min_samples = 20000)\n",
     "tr, va, te = pp.get_subject_split(df, [0.8, 0.1, 0.1])\n",
-    "batch, channels, masks = module.get_data_batch(df, batch_size = 1, seq_len = 750, channels = inp_channels + out_channels, sample_res = 32, num_cores = 4)"
+    "batch, channels, masks, row_df = module.get_data_batch(df, batch_size = 1, seq_len = 750, channels = inp_channels + out_channels, sample_res = 32, num_cores = 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5506bd7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(batch)\n",
+    "print(channels)\n",
+    "print(masks)\n",
+    "display(row_df)"
    ]
   },
   {
